--- a/index.html
+++ b/index.html
@@ -3,137 +3,160 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jogo da Memória</title>
+<title>Jogo da Memória - Pink Flame (Otimizado)</title>
 
 <style>
-:root{
-  --card-size: min(130px, 24vw);
-  --pink-border:#ff93c8;
+:root {
+  --card-size: min(130px, 22vw);
+  --pink-border: #ff93c8;
+  --dark-pink: #c71585;
 }
 
-body{
- 
-  font-family: "arial", sans-serif;
-  background: linear-gradient(180deg,#ffe6f5,#fff4fc);
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+body {
+  font-family: "Arial", sans-serif;
+  background: linear-gradient(180deg, #ffe6f5, #fff4fc);
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
-.board{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:15px;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-.card{
-  width:var(--card-size);
-  height:var(--card-size);
-  perspective:900px;
-  cursor:pointer;
+.titulo-grande {
+  font-size: clamp(2rem, 8vw, 3.5rem);
+  color: var(--dark-pink);
+  text-align: center;
+  margin: 20px 0 30px 0;
+  font-weight: bold;
+  text-shadow: 2px 2px 5px rgba(199, 21, 133, 0.2);
+  width: 100%;
 }
 
-.card-inner{
-  width:100%;
-  height:100%;
-  transition:transform .6s;
-  transform-style:preserve-3d;
+.menu-botoes {
+  margin-bottom: 30px;
+  display: flex;
+  gap: 15px;
 }
 
-.card.flip .card-inner{
-  transform:rotateY(180deg);
+button {
+  padding: 12px 25px;
+  font-size: 16px;
+  border: none;
+  border-radius: 12px;
+  background: #ff66b3;
+  color: white;
+  cursor: pointer;
+  transition: transform 0.2s, background 0.3s;
+  box-shadow: 0 4px 10px rgba(255, 102, 179, 0.3);
 }
 
-.face{
-  position:absolute;
-  inset:0;
-  backface-visibility:hidden;
-  border-radius:15px;
-  border:3px solid var(--pink-border);
+button:hover {
+  background: #ff4da6;
+  transform: scale(1.05);
 }
 
-.back{
-  background:#ff9ac8;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:30px;
-  color:white;
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 15px;
+  width: 100%;
+  max-width: 600px;
 }
 
-.front{
-  transform:rotateY(180deg);
-  background:white;
+.card {
+  width: var(--card-size);
+  height: var(--card-size);
+  perspective: 1000px;
+  cursor: pointer;
 }
 
-.front img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
+.card-inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transform-style: preserve-3d;
+  border-radius: 15px;
+  position: relative;
+  will-change: transform; 
 }
 
-button{
-  margin:10px;
-  padding:10px 20px;
-  border:none;
-  border-radius:10px;
-  background:#ff66b3;
-  color:white;
-  cursor:pointer;
-}
-.card{
-  position:relative;
+
+@keyframes glow-pink {
+  0% { box-shadow: 0 0 5px #ff1493, 0 0 10px #ff69b4; }
+  100% { box-shadow: 0 0 15px #ff1493, 0 0 25px #ff69b4; }
 }
 
-.card::before{
-  content:"";
-  position:absolute;
-  inset:-4px;
-  border-radius:18px;
-  background:
-    radial-gradient(circle at 30% 30%, #ffb3d9, transparent 45%),
-    radial-gradient(circle at 70% 70%, #ff69b4, transparent 45%);
-  opacity:0;
-  filter:blur(6px);
-  transition:opacity .3s;
-  z-index:-1;
+
+.card.flip .card-inner {
+  transform: rotateY(180deg);
+  animation: glow-pink 1.5s infinite alternate ease-in-out;
 }
 
-.card:hover::before,
-.card:active::before,
-.card.flip::before{
-  opacity:1;
+.face {
+  position: absolute;
+  inset: 0;
+  backface-visibility: hidden;
+  border-radius: 15px;
+  border: 3px solid var(--pink-border);
+  -webkit-backface-visibility: hidden; 
 }
 
+.back {
+  background: #ff9ac8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: white;
+}
+
+.front {
+  transform: rotateY(180deg);
+  background: white;
+}
+
+.front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+@media (max-width: 480px) {
+  .board { gap: 10px; }
+  .titulo-grande { font-size: 2.2rem; }
+}
 </style>
 </head>
 
-<body>
+<body onclick="iniciarAudio()">
 
-<div> 
-  <h2 style="font-size: 2.0rem; color: #d4297c;">🎀 Jogo da Memória 🎀</h2>
+<div class="main-container"> 
+  <h1 class="titulo-grande">🎀 Jogo da Memória 🎀</h1>
 
-  <div style="text-align: center;"></div>
-
-    <button id="btnIniciar"> Iniciar jogo</button>
-    <button id="restart"> Reiniciar</button>
+  <div class="menu-botoes">
+    <button id="btnIniciar">Iniciar jogo</button>
+    <button id="restart">Reiniciar</button>
   </div>
 
   <div id="board" class="board"></div>
 </div>
 
-
 <audio id="audioFundo" loop src="audio/musicafofa.mp3"></audio>
-<audio id="flipSound" src="audio/flip.mp3"></audio>
-<audio id="matchSound" src="audio/match.mp3"></audio>
-<audio id="wrongSound" src="audio/wrong.mp3"></audio>
-<audio id="winSound" src="audio/win.mp3"></audio>
 
 <script>
-
 const imgs = [
-  "img/img-1.png",
+  "img/img-1.png", 
   "img/img-2.png",
   "img/img-3.png",
   "img/img-4.png",
@@ -142,24 +165,31 @@ const imgs = [
 ];
 
 const board = document.getElementById("board");
-
+const audioFundo = document.getElementById("audioFundo");
 let deck = [];
 let first = null;
 let second = null;
 let lock = false;
+let audioIniciado = false;
 
-const audioFundo = document.getElementById("audioFundo");
-const flipSound = document.getElementById("flipSound");
-const matchSound = document.getElementById("matchSound");
-const wrongSound = document.getElementById("wrongSound");
-const winSound = document.getElementById("winSound");
+function iniciarAudio() {
+  if (!audioIniciado) {
+    audioFundo.volume = 0.2; 
+    audioFundo.play().catch(() => {});
+    audioIniciado = true;
+  }
+}
 
-document.getElementById("btnIniciar").onclick = () => {
-  audioFundo.volume = 0.5;
-  audioFundo.play().catch(()=>{});
+document.getElementById("btnIniciar").onclick = (e) => {
+  e.stopPropagation();
+  iniciarAudio();
   startGame();
 };
 
+document.getElementById("restart").onclick = (e) => {
+  e.stopPropagation();
+  startGame();
+};
 
 function shuffle(arr){
   return arr.sort(() => Math.random() - 0.5);
@@ -167,28 +197,27 @@ function shuffle(arr){
 
 function render(){
   board.innerHTML = "";
-
   deck.forEach(src => {
     const card = document.createElement("div");
     card.className = "card";
-
     card.innerHTML = `
       <div class="card-inner">
         <div class="face back">✨</div>
         <div class="face front">
-          <img src="${src}" alt="">
+          <img src="${src}" alt="card">
         </div>
       </div>
     `;
-
-    card.onclick = () => flip(card);
+   
+    card.onclick = () => {
+      if(!lock) flip(card);
+    };
     board.appendChild(card);
   });
 }
 
 function flip(card){
   if(lock || card.classList.contains("flip")) return;
-
   card.classList.add("flip");
 
   if(!first){
@@ -199,49 +228,39 @@ function flip(card){
   second = card;
   lock = true;
 
-  if(
-    first.querySelector("img").src ===
-    second.querySelector("img").src
-  ){
+  if(first.querySelector("img").src === second.querySelector("img").src){
+    
     first = second = null;
     lock = false;
   } else {
+   
     setTimeout(() => {
-      first.classList.remove("flip");
-      second.classList.remove("flip");
+      if(first) first.classList.remove("flip");
+      if(second) second.classList.remove("flip");
       first = second = null;
       lock = false;
-    }, 800);
+    }, 1000); 
   }
 }
 
 function startGame(){
   first = second = null;
   lock = true;
-
   deck = shuffle([...imgs, ...imgs]);
   render();
 
   
-  document.querySelectorAll(".card").forEach(card => {
-    card.classList.add("flip");
-  });
-
- 
+  const allCards = document.querySelectorAll(".card");
+  allCards.forEach(card => card.classList.add("flip"));
+  
   setTimeout(() => {
-    document.querySelectorAll(".card").forEach(card => {
-      card.classList.remove("flip");
-    });
+    allCards.forEach(card => card.classList.remove("flip"));
     lock = false;
   }, 2000);
 }
 
-startGame();
-
+window.onload = startGame;
 </script>
 
 </body>
-
-
-
 </html>
