--- a/index.html
+++ b/index.html
@@ -1,176 +1,16 @@
+
 <!doctype html>
 <html lang="pt-BR">
 <head>
-<link rel="icon" type="image/icon" href="favicon.ico">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<title>Jogo da Memória Hamtaro</title>
+  <link rel="icon" type="image/icon" href="favicon.ico">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <title>Jogo da Memória Hamtaro</title>
 
-<style>
-:root {
-  
-  --card-size: min(85px, 21vw); 
-  --pink-border: #d36d9e;
-  --dark-pink: #c00763;
-  
-  --bg-gradient: linear-gradient(180deg, #e29eb9, #cf348f);
-  
-  --flame-color: #ff007f;
-  --flame-glow: #ff8c00;
-}
-
-@media (min-width: 600px) {
-  :root { --card-size: 115px; }
-}
-
-body {
-  font-family: "Arial", sans-serif;
-  background: var(--bg-gradient);
-  color: var(--dark-pink);
-  min-height: 100vh;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 15px;
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
-
-.main-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 500px;
-}
-
-.titulo-grande {
-  font-size: clamp(1.8rem, 8vw, 2.5rem);
-  color: var(--dark-pink);
-  text-align: center;
-  margin: 10px 0;
-  font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-}
-
-
-.status-container {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  margin-bottom: 20px;
-  background: rgb(238, 141, 190);
-  padding: 12px 0;
-  border-radius: 20px;
-  border: 2px solid var(--pink-border);
-  box-shadow: 0 4px 10px rgba(211, 109, 158, 0.2);
-}
-
-.status-item {
-  text-align: center;
-  font-size: 0.8rem;
-  font-weight: bold;
-  color: #666;
-}
-
-.status-item span {
-  display: block;
-  font-size: 1.2rem;
-  color: var(--dark-pink);
-}
-
-.menu-botoes {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-button {
-  padding: 12px 30px;
-  font-size: 1rem;
-  font-weight: bold;
-  border: none;
-  border-radius: 50px;
-  background: #e968a8;
-  color: rgb(245, 240, 243);
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(255, 102, 179, 0.4);
-  transition: transform 0.2s;
-}
-
-button:active {
-  transform: scale(0.95);
-}
-
-
-.board {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 12px;
-  width: 100%;
-}
-
-.card {
-  width: var(--card-size);
-  height: var(--card-size);
-  perspective: 1000px;
-}
-
-.card-inner {
-  width: 100%;
-  height: 100%;
-  transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-  transform-style: preserve-3d;
-  position: relative;
-  will-change: transform;
-}
-
-
-@keyframes flameGlow {
-  0% { box-shadow: 0 0 5px var(--flame-color), 0 0 10px var(--flame-color); }
-  50% { box-shadow: 0 0 15px var(--flame-glow), 0 0 25px var(--flame-color); }
-  100% { box-shadow: 0 0 5px var(--flame-color), 0 0 10px var(--flame-color); }
-}
-
-.card.flip .card-inner {
-  transform: rotateY(180deg);
-  animation: flameGlow 1.5s infinite alternate ease-in-out; 
-}
-
-.face {
-  position: absolute;
-  inset: 0;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  border-radius: 15px;
-  border: 2px solid var(--pink-border);
-}
-
-.back {
-  background: #a3426e;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.8rem;
-  color: white;
-}
-
-.front {
-  transform: rotateY(180deg);
-  background: white;
-}
-
-.front img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 13px;
-}
-</style>
+  <link rel="stylesheet" href="style.css">
 </head>
+
+
 
 <body onclick="iniciarAudio()">
 
@@ -191,105 +31,7 @@ button:active {
 
 <audio id="audioFundo" loop src="audio/musicafofa.mp3"></audio>
 
-<script>
-const imgs = ["img/img-1.png", "img/img-2.png", "img/img-3.png", "img/img-4.png", "img/img-5.png", "img/img-6.png"];
-const board = document.getElementById("board");
-const timerDisplay = document.getElementById("timer");
-const triesDisplay = document.getElementById("tries");
-const audioFundo = document.getElementById("audioFundo");
 
-let deck = [], first = null, second = null, lock = false, audioIniciado = false;
-let tentativas = 0, segundos = 0, cronometro, paresEncontrados = 0;
-
-function iniciarAudio() {
-  if (!audioIniciado) {
-    audioFundo.volume = 0.2; 
-    audioFundo.play().catch(() => {});
-    audioIniciado = true;
-  }
-}
-
-function formatarTempo(s) {
-  const min = Math.floor(s / 60);
-  const seg = s % 60;
-  return `${min.toString().padStart(2, '0')}:${seg.toString().padStart(2, '0')}`;
-}
-
-function iniciarCronometro() {
-  clearInterval(cronometro);
-  segundos = 0;
-  cronometro = setInterval(() => {
-    segundos++;
-    timerDisplay.innerText = formatarTempo(segundos);
-  }, 1000);
-}
-
-function render(){
-  board.innerHTML = "";
-  deck.forEach(src => {
-    const card = document.createElement("div");
-    card.className = "card";
-    card.innerHTML = `<div class="card-inner"><div class="face back">✨</div><div class="face front"><img src="${src}"></div></div>`;
-    card.onclick = () => { if(!lock) flip(card); };
-    board.appendChild(card);
-  });
-}
-
-function flip(card){
-  if(lock || card.classList.contains("flip")) return;
-  card.classList.add("flip");
-  
-  if(!first){ first = card; return; }
-  
-  second = card;
-  lock = true;
-  tentativas++;
-  triesDisplay.innerText = tentativas;
-
-  if(first.querySelector("img").src === second.querySelector("img").src){
-    paresEncontrados++;
-    first = second = null;
-    lock = false;
-    if(paresEncontrados === imgs.length) {
-      clearInterval(cronometro);
-      setTimeout(() => alert(`Vitória!\nTempo: ${formatarTempo(segundos)}\nTentativas: ${tentativas}`), 500);
-    }
-  } else {
-    setTimeout(() => {
-      first.classList.remove("flip");
-      second.classList.remove("flip");
-      first = second = null;
-      lock = false;
-    }, 1000); 
-  }
-}
-
-function startGame(){
-  clearInterval(cronometro);
-  tentativas = 0; paresEncontrados = 0; segundos = 0;
-  triesDisplay.innerText = "0"; timerDisplay.innerText = "00:00";
-  lock = true;
-  
-  deck = [...imgs, ...imgs].sort(() => Math.random() - 0.5);
-  render();
-
-  
-  const cards = document.querySelectorAll(".card");
-  cards.forEach(c => c.classList.add("flip"));
-  
-  setTimeout(() => {
-    cards.forEach(c => c.classList.remove("flip"));
-    lock = false;
-    iniciarCronometro();
-  }, 2000);
-}
-
-
-document.getElementById("restart").onclick = startGame;
-
-
-window.onload = startGame;
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
