--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <!doctype html>
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Jogo da Memória Hamtaro</title>
   <link rel="stylesheet" href="style.css">
 </head>
